[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    "versioneer[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "diamond4py"
authors = [
  { name="Zhang.H.N", email="zhang.h.n@foxmail.com" },
]
description = "Diamond Python bindings for sequence alignment"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
license = {text = "GPLv3"}
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/GCS-ZHN/diamond4py"
"Bug Tracker" = "https://github.com/GCS-ZHN/diamond4py/issues"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "diamond4py/_version.py"
versionfile_build = "diamond4py/_version.py"
tag_prefix = "v"
parentdir_prefix = "diamond4py-"